// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/postmark SendEmail when all inputs are correct sends email with attachments 1`] = `
Ok {
  "value": Object {
    "messageId": "dcdb379f-1e96-4fcd-9418-d74cf079c7d5",
  },
}
`;

exports[`communication/send-email/postmark SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "63e777eb-25c4-489c-9b46-7ba8605bc356",
  },
}
`;

exports[`communication/send-email/postmark when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "MappedHTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Error parsing 'To': Illegal email address 'invalidemail'. It must contain the '@' symbol.\\"
}
AST Path: definitions[0].statements[2].responseHandlers[1].statements[0]
Original Map Location: Line 40, column 7",
}
`;
